--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# Citrix
+## CPX
+crash/
+log/
+netscaler/
+nsconfig/
+nslog/
+nstrace/
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
